<resources>
    <string name="app_name">DiMa</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="meals">Meals</string>
    <string name="scanner">Scanner</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cant_insert_product">Cant insert new product!</string>
    <string name="success">Success!</string>
    <string name="add_new_product">Add new product.</string>
    <string name="register">Register</string>
    <string name="added_to_day">Product is added to current day</string>
    <string name="cant_add_pro_to_day">Adding the selected product to the day failed.:(</string>
    <string name="month_01">January</string>
    <string name="month_02">February</string>
    <string name="month_03">March</string>
    <string name="month_04">April</string>
    <string name="month_05">May</string>
    <string name="month_06">June</string>
    <string name="month_07">July</string>
    <string name="month_08">August</string>
    <string name="month_09">September</string>
    <string name="month_10">October</string>
    <string name="month_11">November</string>
    <string name="month_12">December</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_delete">Are you shure you want to delete this product from currently viewed list ?</string>
    <string name="product_not_found">Product not found.</string>
    <string name="breakfast_1">Breakfast</string>
    <string name="second_breakfast_2">Second breakfast</string>
    <string name="dinner_3">Dinner</string>
    <string name="dessert_4">Dessert</string>
    <string name="tea_5">Tea</string>
    <string name="supper_6">Supper</string>
    <string name="snacks_7">Snacks</string>
    <string name="training_8">Training</string>
    <string name="dish">Denmark</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for icoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="nutrients_goal">Nutrients goal.</string>
    <string name="data_has_been_saved">Data has been saved!</string>
    <string name="product_registered">New product is registered.</string>
    <string name="already_exist">Already exist!</string>
    <string name="title_activity_delate_product">DelateProductActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="notification">Notification.</string>
    <string name="nummeret_breakfast_1">1 Breakfast</string>
    <string name="nummeret_breakfast_2">2 Breakfast</string>
    <string name="kcal">Kcal</string>
    <string name="protein_with_tabs">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbo">Carbo</string>
    <string name="close">CLOSE</string>
    <string name="channel_name">meal_time_allert</string>
    <string name="channel_description">Notification for begin eat meal!</string>
    <string name="calculate_nutrients_for_portion_and_save_to_base">Calculate nutrients for portion and save to base.</string>
    <string name="current_meal">\Meal: \</string>
    <string name="auto_suggest_meal_list">Prompting the list of products for the currently consumed meal.</string>
    <string name="save">Save</string>
    <string name="no_less_them_zero">You cannot set a weight less than 0  Więcej o tekście źródłowymWskaż tekst źródłowy, by wyświetlić dodatkowe informacje o tłumaczeniu Prześlij opinię Panele boczne Historia Zapisane Pomóż</string>
    <string name="automatic_prompting">Advanced settings</string>
    <string name="select_meals_and_notification"><![CDATA[Select meals & Notification]]></string>
    <string name="title_activity_main_new">MainActivityNew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="weight">Weight</string>
    <string name="portion">Portion</string>
    <string name="add_last_weight_portion">Set last added weight / portion</string>
    <string name="newr_added_no_last_weight">You have never added this product before.</string>
    <string name="add_weight_or_portion">Add weight or portion</string>
    <string name="set_weight">Set weight</string>
    <string name="set_weight_portion_more_them_zero">If u want delete this product push DELETE button, else set weight/portion on value more them 0.</string>
    <string name="set_weight_portion_mor_them_zero">You must set weight / portion mor tem 0 to add this product to the day.</string>
    <string name="favorite_and_portion">Set favorite and portion</string>
    <string name="basic_info">Basic information</string>
    <string name="select_basic_weight">Select basic weight</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="name">Name</string>
    <string name="clear_products_table">Clear products table</string>
    <string name="clear_user_hoises">Clear all lists of products except the main one (suggesting products) with a long press.</string>
    <string name="shopping_list">Shopping list</string>
    <string name="product_name">Product name</string>
    <string name="delete_selected">Delete selected</string>
    <string name="enter_the_name_of_the_new_product">Enter the name of the new product</string>
    <string name="clear_data_base_but">Clear product database (long press).</string>
    <string name="select_meal">Select meal</string>
    <string name="favorite">Favorite</string>
    <string name="Select_meal_where_u_want_to_often_use_this_product">Select meal where u want to often use this product ( not required ):</string>
    <string name="edit_weight_portion">Edit weight/portion</string>
    <string name="add">Add</string>
    <string name="are_you_sure_you_want_to_delete_this_product_from_database">Are you sure you want to delete this product from database?</string>
    <string name="left_percent">Left ( % )</string>
    <string name="advertising_tv">Advertising</string>
    <string name="clear">Clear.</string>
</resources>
