<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_vertical|center"
    tools:context=".products_fragment">


    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/custom_gray"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Button
        android:id="@+id/floatingActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/custom_red"
        android:clickable="true"
        android:focusable="true"
        android:foregroundGravity="center_vertical|right"
        android:foregroundTint="#FFFFFF"
        android:text="Create new product"
        android:textColor="@color/design_default_color_background"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/light_gray_bt_shape"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/textView22"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toTopOf="@+id/textView21"></LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/gray_bt_shape"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView22"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/current_kcal">

        </LinearLayout>

        <TextView
            android:id="@+id/current_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2100/"
            android:textColor="@color/custom_red"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/kcal_user_pref"
            app:layout_constraintEnd_toEndOf="@+id/textView21"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21">

        </TextView>

        <TextView
            android:id="@+id/current_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="160/"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/pro_user_pref"
            app:layout_constraintEnd_toEndOf="@+id/textView22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="@+id/current_kcal">

        </TextView>

        <TextView
            android:id="@+id/current_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="45/"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fat_uset_pref"
            app:layout_constraintEnd_toEndOf="@+id/textView23"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:layout_constraintTop_toTopOf="@+id/current_kcal">

        </TextView>

        <TextView
            android:id="@+id/current_carbo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="450/"
            android:textColor="@android:color/holo_purple"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/carbo_user_pref"
            app:layout_constraintEnd_toEndOf="@+id/textView24"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView24"
            app:layout_constraintTop_toTopOf="@+id/current_kcal">

        </TextView>

        <TextView
            android:id="@+id/kcal_user_pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="100"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/current_kcal"
            app:layout_constraintStart_toStartOf="@+id/current_kcal"
            app:layout_constraintTop_toBottomOf="@+id/current_kcal" />

        <TextView
            android:id="@+id/pro_user_pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="100"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/kcal_user_pref"
            app:layout_constraintEnd_toEndOf="@+id/current_pro"
            app:layout_constraintStart_toStartOf="@+id/current_pro"
            app:layout_constraintTop_toBottomOf="@+id/current_pro" />

        <TextView
            android:id="@+id/fat_uset_pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="100"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/pro_user_pref"
            app:layout_constraintEnd_toEndOf="@+id/current_fat"
            app:layout_constraintStart_toStartOf="@+id/current_fat"
            app:layout_constraintTop_toBottomOf="@+id/current_fat" />

        <TextView
            android:id="@+id/carbo_user_pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="100"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/fat_uset_pref"
            app:layout_constraintEnd_toEndOf="@+id/current_carbo"
            app:layout_constraintStart_toStartOf="@+id/current_carbo"
            app:layout_constraintTop_toBottomOf="@+id/current_carbo" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/red_bt_shape"
            android:elevation="3dp"
            android:text="@string/kcal"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_surface"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/textView23"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/blue_bt_shape"
            android:elevation="3dp"
            android:text="@string/protein_with_tabs"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_surface"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/yelow_bt_shape"
            android:elevation="3dp"
            android:text="@string/fat"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_surface"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"
            app:layout_constraintEnd_toStartOf="@+id/textView24"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/purple_bt_shape"
            android:elevation="3dp"
            android:text="@string/carbo"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_surface"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView23"
            app:layout_constraintEnd_toStartOf="@+id/textView22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView23" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>